https://github.com/e-government-ua/i/issues/1193 item 4 add z-index to tiggle-filter

--- a/dashboard-js/client/components/navbar/navbar.css
+++ b/dashboard-js/client/components/navbar/navbar.css
@@ -58,6 +58,7 @@
   right: 15px;
   top: 60px;
   font-style: italic;
+  z-index: 1050;
 }
 .form-horizontal {
   padding: 15px;
